# robotdog_guide

./: .env  .gitignore  README.md  client.py  cmd_&_issues.txt  main.py  models_reviews.txt  pyproject.toml  requirements.txt  requirements_unified.txt
examples/: structured_output_example.py
object_detection/: door_detector.yaml  readme.md  split_data.py  train.py
object_detection/door_dataset_ias_lab/: classes.txt  notes.json
object_detection/door_dataset_ias_lab/labels/: 0142d536-latest_image_color_lab_53.txt  07960bc4-latest_image_color_lab_9.txt  0edc9c4f-latest_image_color_lab_6.txt  128025c8-latest_image_color_lab_38.txt  18c4c582-IMG_0120.txt  2e5b47d2-IMG_0125.txt  304ebdd8-latest_image_color_lab_66.txt  35aad4ab-latest_image_color_lab_49.txt  412620b7-IMG_0107.txt  4623f7a5-latest_image_color_lab_4.txt  4a90d771-latest_image_color_lab_18.txt  51ae42dc-latest_image_color_lab_11.txt  5c482ba9-latest_image_color_lab_44.txt  6dc525f5-latest_image_color_lab_32.txt  6ff5996f-latest_image_color_lab_68.txt  7c4c8c4f-latest_image_color_lab_15.txt  805b11bc-IMG_0117.txt  829aa477-latest_image_color_lab_67.txt  843f3b14-IMG_0106.txt  8658b5af-latest_image_color_lab_46.txt  8f460ea5-latest_image_color_lab_31.txt  96b8484d-latest_image_color_lab_63.txt  9a9e6087-IMG_0124.txt  9b1e7f07-latest_image_color_lab_13.txt  a2c86da2-latest_image_color_lab_10.txt  a96344a6-latest_image_color_lab_19.txt  b3b72696-latest_image_color_lab_61.txt  b5601c15-latest_image_color_lab_55.txt  be0c46ca-latest_image_color_lab_45.txt  cd96066f-IMG_0114.txt  d0a23bad-latest_image_color_lab_30.txt  d2ff7d2b-IMG_0109.txt  dd6ebf42-IMG_0118.txt  dee09bcf-latest_image_color_lab_3.txt  df9a3d74-latest_image_color_lab_48.txt  e56b87d3-IMG_0113.txt  eee331e8-latest_image_color_lab_35.txt  f1c55abd-IMG_0119.txt  f1d93345-latest_image_color_lab_8.txt  train.cache  (+1 more)
object_detection/doortypes_dataset_ias_lab/: classes.txt  notes.json
object_detection/doortypes_dataset_ias_lab/labels/: 0142d536-latest_image_color_lab_53.txt  252f1bc7-latest_image_color_lab_54.txt  2e5b47d2-IMG_0125.txt  304ebdd8-latest_image_color_lab_66.txt  35aad4ab-latest_image_color_lab_49.txt  3a2aa320-latest_image_color_lab_20.txt  43fbe6fa-IMG_0121.txt  4a1cfa50-latest_image_color_lab_14.txt  4a90d771-latest_image_color_lab_18.txt  51ae42dc-latest_image_color_lab_11.txt  61d2dcac-IMG_0112.txt  653227bb-latest_image_color_lab_16.txt  6dc525f5-latest_image_color_lab_32.txt  9fa1d66a-IMG_0111.txt  (+17 more)
src/: config.py  graph.py  logger.py  main.py  performance_validation.txt  rag_module.py
src/graph/: schemas.py  state.py  workflow.py
src/mcp_servers/: rag_module.py  robot_dog_tools_server.py
src/nodes/: action_nodes.py  decision_nodes.py  feedback_nodes.py  rag_nodes.py  speech_process_nodes.py
src/rag_server/: __init__.py  answerGenerator.py  config.py  databaseHandler.py  documentProcessor.py  improvements.txt  logger.py  scratch.py  text_scraper.py  voiceAssistant.py
src/ros_bridge_demo/: data.py  test_lg.py
src/tools_servers/: robot_dog_tools.py  robot_dog_tools_server_with_mcp.py  ros_client.py  tools.py
(+75 files in other folders)
