[project]
name = "robotdog-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.11.0",
    "asgiref>=3.10.0",
    "async-timeout>=5.0.1",
    "attrs>=25.4.0",
    "backoff>=2.2.1",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.2",
    "black>=25.9.0",
    "bs4>=0.0.2",
    "build>=1.3.0",
    "cachetools>=6.2.1",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.4",
    "chromadb>=1.3.0",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "coloredlogs>=15.0.1",
    "deprecated>=1.2.18",
    "distro>=1.9.0",
    "durationpy>=0.10",
    "exceptiongroup>=1.3.0",
    "fastapi>=0.120.4",
    "fastmcp>=2.13.0.2",
    "filelock>=3.20.0",
    "flake8>=7.3.0",
    "flatbuffers>=25.9.23",
    "fsspec>=2025.10.0",
    "google-auth>=2.42.1",
    "googleapis-common-protos>=1.71.0",
    "greenlet>=3.2.4",
    "grpcio>=1.76.0",
    "gtts>=2.5.4",
    "h11>=0.16.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.0.1",
    "humanfriendly>=10.0",
    "idna>=3.11",
    "importlib-metadata>=8.7.0",
    "importlib-resources>=6.5.2",
    "ipython>=8.37.0",
    "jinja2>=3.1.6",
    "jiter>=0.11.1",
    "joblib>=1.5.2",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jsonschema>=4.25.1",
    "jsonschema-specifications>=2025.9.1",
    "kubernetes>=34.1.0",
    "langchain>=1.0.3",
    "langchain-core>=1.0.2",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.2",
    "langsmith>=0.4.39",
    "llama-index>=0.14.7",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-tools-mcp>=0.4.3",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "mcp>=1.20.0",
    "mdurl>=0.1.2",
    "mmh3>=5.2.0",
    "mpmath>=1.3.0",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "oauthlib>=3.3.1",
    "openai>=1.109.1",
    "opencv-python>=4.11.0.86",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp-proto-common>=1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-instrumentation>=0.59b0",
    "opentelemetry-instrumentation-asgi>=0.59b0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-proto>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-semantic-conventions>=0.59b0",
    "opentelemetry-util-http>=0.59b0",
    "orjson>=3.11.4",
    "overrides>=7.7.0",
    "packaging>=25.0",
    "pandas>=2.2.3",
    "pillow>=12.0.0",
    "posthog>=5.4.0",
    "protobuf>=6.33.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pydantic>=2.12.3",
    "pydantic-core>=2.41.4",
    "pygments>=2.19.2",
    "pypika>=0.48.9",
    "pyproject-hooks>=1.2.0",
    "pytest>=8.4.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "pyttsx3>=2.99",
    "pytz>=2025.2",
    "scipy>=1.15.3",
    "sentence-transformers>=0.2.5.1",
    "simpleaudio>=1.0.4",
    "typing-extensions>=4.15.0",
    "vosk>=0.3.45",
]
